Changes in the workflows

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -16,5 +16,5 @@ jobs:
     permissions:
       contents: read
       packages: write
-    if: github.repository == 'open-telemetry/opentelemetry-demo'
+    # if: github.repository == 'open-telemetry/opentelemetry-demo'
     uses: ./.github/workflows/component-build-images.yml
