--- a/.github/workflows/component-build-images.yml
+++ b/.github/workflows/component-build-images.yml
@@ -19,11 +19,11 @@ on:
         default: 'otel/demo'
         required: false
         type: string
-      ghcr_repo:
-        description: GHCR repository
-        default: 'ghcr.io/open-telemetry/demo'
-        required: false
-        type: string
+      # ghcr_repo:
+      #   description: GHCR repository
+      #   default: 'ghcr.io/open-telemetry/demo'
+      #   required: false
+      #   type: string
 
 permissions:
   contents: read
