--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,13 @@ on:
     tags:
       - '*'
 
+  workflow_dispatch:
+    inputs:
+      tag_name:
+        description: 'Tag name to build and publish'
+        required: true
+        type: string
+
 permissions:
   contents: read
 
