--- a/.env-grafana
+++ b/.env-grafana
@@ -1,6 +1,6 @@
 # Demo App version
 IMAGE_VERSION=2.1.3
-IMAGE_NAME=ghcr.io/open-telemetry/demo
+IMAGE_NAME=maklipsa/open-telemetry/demo
 DEMO_VERSION=latest
 
 # Build Args
