--- a/src/payment/package.json
+++ b/src/payment/package.json
@@ -9,6 +9,7 @@
   "author": "Jonathan Lui",
   "license": "ISC",
   "dependencies": {
+    "@pyroscope/nodejs": "^0.4.0",
     "@grpc/grpc-js": "1.12.6",
     "@grpc/proto-loader": "0.8.0",
     "@openfeature/flagd-provider": "0.13.3",
