--- a/src/shipping/Cargo.toml
+++ b/src/shipping/Cargo.toml
@@ -7,6 +7,8 @@ name = "shipping"
 path = "src/main.rs"
 
 [dependencies]
+pyroscope = "0.5"
+pyroscope_pprofrs = "0.2"
 actix-web = "4"
 anyhow = "1.0.100"
 awc = { version = "3.8.1", default-features = false, features = ["compress-zstd"] }
