--- a/.github/workflows/component-build-images.yml
+++ b/.github/workflows/component-build-images.yml
@@ -150,6 +150,25 @@ jobs:
       - uses: actions/checkout@v6.0.1
         with:
           fetch-depth: 0
+      - name: Extract branch name
+        id: branch
+        run: |
+          # Get branch name from GITHUB_REF
+          if [[ "${{ github.ref }}" == refs/heads/* ]]; then
+            BRANCH_NAME="${{ github.ref_name }}"
+          elif [[ "${{ github.ref }}" == refs/tags/* ]]; then
+            # For tags, try to get the branch from the tag or use 'release'
+            BRANCH_NAME="release"
+          elif [[ "${{ github.ref }}" == refs/pull/* ]]; then
+            # For PRs, use the head branch
+            BRANCH_NAME="${{ github.head_ref }}"
+          else
+            BRANCH_NAME="main"
+          fi
+          # Sanitize branch name (replace / with - and remove invalid chars)
+          BRANCH_NAME=$(echo "$BRANCH_NAME" | sed 's/[^a-zA-Z0-9._-]/-/g' | sed 's/--*/-/g' | sed 's/^-//' | sed 's/-$//')
+          echo "name=$BRANCH_NAME" >> "$GITHUB_OUTPUT"
+          echo "Branch name: $BRANCH_NAME"
       - name: Load environment variables from .env file
         run: |
           if [ -f .env ]; then
@@ -214,7 +233,7 @@ jobs:
             OPENTELEMETRY_CPP_VERSION=${{ env.OPENTELEMETRY_CPP_VERSION }}
             TRACETEST_IMAGE_VERSION=${{ env.TRACETEST_IMAGE_VERSION }}
           tags: |
-            ${{ inputs.dockerhub_repo }}:${{ inputs.version }}-${{matrix.file_tag.tag_suffix }}
-            ${{ inputs.dockerhub_repo }}:latest-${{matrix.file_tag.tag_suffix }}
+            ${{ inputs.dockerhub_repo }}:${{ inputs.version }}-${{ matrix.file_tag.tag_suffix }}-${{ steps.branch.outputs.name }}
+            ${{ inputs.dockerhub_repo }}:latest-${{ matrix.file_tag.tag_suffix }}-${{ steps.branch.outputs.name }}
           cache-from: type=gha
           cache-to: type=gha
