another try at addig pyroscope

--- a/src/payment/Dockerfile
+++ b/src/payment/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /usr/src/app/
 COPY ./src/payment/package.json package.json
 COPY ./src/payment/package-lock.json package-lock.json
 
-RUN npm ci --omit=dev
+RUN npm ci --omit=dev && npm install @pyroscope/nodejs
 
 # -----------------------------------------------------------------------------
 
