--- a/src/quote/composer.json
+++ b/src/quote/composer.json
@@ -19,7 +19,8 @@
         "php-http/guzzle7-adapter": "1.1.0",
         "react/http": "v1.11.0",
         "slim/psr7": "1.8.0",
-        "slim/slim": "4.15.1"
+        "slim/slim": "4.15.1",
+        "pyroscope/pyroscope": "^0.2"
     },
     "autoload": {
         "psr-4": {
