--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -38,7 +38,7 @@ WORKDIR /app
 COPY ./src/frontend/package.json package.json
 COPY ./src/frontend/package-lock.json package-lock.json
 
-RUN npm ci --omit=dev
+RUN npm ci --omit=dev && npm install @pyroscope/nodejs
 
 # -----------------------------------------------------------------------------
 
